crates/infinity-daemon/src/session/snapshots/infinity_daemon__session__agent_loop__tests__issue31_compaction_child_history.snap
---
source: crates/infinity-daemon/src/session/agent_loop.rs
expression: compaction_req.chat_history
---
[
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "root message one"
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "text": "root response one"
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "root message two"
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "text": "root response two"
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "spawn a child"
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "id": "[id]",
        "call_id": null,
        "function": {
          "name": "spawn_thread",
          "arguments": {
            "child_of": [
              "root"
            ],
            "instructions": "do child work"
          }
        },
        "signature": null,
        "additional_params": null
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "toolresult",
        "id": "[id]",
        "content": [
          {
            "type": "text",
            "text": "[spawn_instructions]"
          }
        ]
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "text": "child first response"
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "child follow-up"
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "id": "[id]",
        "call_id": null,
        "function": {
          "name": "__harness_begin_compaction__",
          "arguments": {}
        },
        "signature": null,
        "additional_params": null
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "toolresult",
        "id": "[id]",
        "content": [
          {
            "type": "text",
            "text": "[compaction_instructions]"
          }
        ]
      }
    ]
  }
]
